<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnvPlotsAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- basic button text -->
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    
    <!-- preference strings -->
    <string name="preference_activity_title">Plot Settings</string>
    <string name="preference_server_title">Server</string>
    <string name="preference_server_address_title">Server Address</string>
    <string name="preference_server_address_default">http://ric-cchen.zygo.com/</string>
    <string name="preferences_probe_title">Probe</string>
    <string name="preferences_probe_select_screen_title">Selected Probe</string>
	<string name="preferences_probe_select_screen_summary">None</string>
	<string name="preferences_probe_select_screen_default_value">None</string>
	<string name="preference_plot_range_title">Plot Range</string>
	<string name="preference_range_picker_title">Plot in Past Range Hours</string>
	<string name="preference_update_title">Updates</string>
	<string name="preference_auto_update_checkbox_title">Auto Updates</string>
	<string name="preference_auto_update_checkbox_summary">Turn on/off auto-updates</string>
	<string name="preference_auto_update_picker_title">Update Intervals in Minutes</string>
	
	<!-- SelectProbeActivity strings -->
	<string name="select_probe_activity_title">Probe Settings</string>
    
</resources>
