<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:key="preference_probe_title"
        android:title="@string/preferences_probe_title">
        <PreferenceScreen
            android:key="probe_select_screen_preference"
            android:title="@string/preferences_probe_select_screen_title"
            android:summary="@string/preferences_probe_select_screen_summary">
            <intent
                android:targetClass="com.example.envplotsandroid.SelectProbeActivity"
                android:targetPackage="com.example.envplotsandroid" />
        </PreferenceScreen>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="preference_plot_range_title"
        android:title="@string/preference_plot_range_title">
        <com.example.envplotsandroid.NumberPickerPreference
            android:key="range_number_picker_preference"
            android:title="@string/preference_range_picker_title" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="preference_update_title"
        android:title="@string/preference_update_title">
        <CheckBoxPreference 
            android:key="auto_update_checkbox_preference"
            android:title="@string/preference_auto_update_checkbox_title"
            android:summary="@string/preference_auto_update_checkbox_summary"/>
        <com.example.envplotsandroid.NumberPickerPreference 
            android:key="auto_update_interval_number_picker_preference"
            android:title="@string/preference_auto_update_picker_title"
            android:dependency="auto_update_checkbox_preference"/>
    </PreferenceCategory>

</PreferenceScreen>
